# oscr

./: .travis.yml  CMakeLists.txt  INSTALL.md  README.md  oscr.pc.cmake
cmake/: FindQPOASES.cmake
doc/: Doxyfile.in  Mainpage.dox  treeview.dox
doc/examples/: cpp_examples.dox  cpp_kine_control.dox  cpp_parsing.dox  py_examples.dox  py_kine_control.dox  py_parsing.dox
doc/examples/cpp/: parsing_example.cpp
examples/c++/: CMakeLists.txt  ff6dof-kine-control.cpp  ff6dof-model.cpp
examples/models/: ff6dof.xacro  humanoid_example.urdf  sampleHumanoid.urdf
examples/python/: ff6dof_kine_control.py  ff6dof_model.py  model_humanoid.py  model_humanoid_woRobotBase.py
include/oscr/: oscr.hpp
include/oscr/ik/: kine-task-com.hpp  kine-task-pose.hpp  kine-task-posture.hpp  kine-task.hpp  osik-solver-HQP.hpp  osik-solver-NS.hpp  osik-solver-WQP.hpp  osik-solver.hpp  osik-solvers.hpp
include/oscr/model/: robot-model-ff6dof.hpp  robot-model-pin.hpp  robot-model-rbdl.hpp  robot-model.hpp
include/oscr/tools/: math-utils.hpp  model-utils.hpp  vector-logger.hpp
modules/: CMakeLists.txt  oscr.i
modules/deprecated/: kineTaskPose.i  mathUtils.i  robotModelPin.i  robotModelRbdl.i
modules/oscr/: robot_base.py  ros_kine_sim.py  ros_kine_tasks.py  ros_logs.py  ros_markers.py  ros_pubs.py  ros_robot.py  utils.py
modules/swig-eigen/: README.md
modules/swig-eigen/cmake/: FindNumPy.cmake  SwigPython.cmake
src/: CMakeLists.txt  kine-task-com.cpp  kine-task-pose.cpp  kine-task-posture.cpp  kine-task.cpp  math-utils.cpp  model-utils.cpp  osik-solver-HQP.cpp  osik-solver-NS.cpp  osik-solver-WQP.cpp  osik-solver.cpp  robot-model-ff6dof.cpp  robot-model-pin.cpp  robot-model-rbdl.cpp  robot-model.cpp  vector-logger.cpp
unitTests/python/: testMathUtils.py  testRobotModelPin.py  testRobotModelRbdl.py
